<resources>
    <string name="app_name">FabflixMobile</string>
    <string name="action_settings">Settings</string>

    <color name="red">#CC0000</color>
    <color name="blue">#0080FF</color>
    <color name="green">#80FF00</color>

    <string name="title_activity_blue"> The Blue Page </string>
    <string name="title_activity_green"> The Green Page </string>
    <string name="the_green_page">The green page</string>
    <string name="no_message_from_last_page">No message from last page.</string>
    <string name="go_to_the_red_page">Go to the Red Page</string>
    <string name="message_for_the_blue_page">Message for the blue page:</string>
    <string name="go_to_the_blue_page">Go to the Blue Page</string>
    <string name="message_for_the_red_page">Message for the red page:</string>
</resources>
